# maxent-grpo

./: .condarc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Makefile  README.md  controller_state.json  coverage.xml  environment.yml  perf_metrics.json  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py  sitecustomize.py  slurm-25649503.out  slurm-26948773.out  slurm-27434571.out  slurm-27434572.out  training-math-grpo.sh  training.sh
.github/workflows/: chaff-guard.yml  ci.yml  lint-ci.yml  perf.yml  pylint.yml  pyright.yml  pytest.yml  ruff.yml  security.yml  smoke.yml  sphinx.yml
.pip/: pip.conf
.pylint/: src_1.stats
archive/trl/: README.md
artifacts/: config_snapshot.txt
configs/: constraints.txt  environment.yml  pyrightconfig.json  pytest.ini  requirements-dev.txt
custom_tasks/: math500_passk.py  pass1.yaml  pass8.yaml  system_prompt.txt
data/: README.md
docs/: api.rst  architecture.rst  conf.py  drgrpo_vs_drx.md  getting-started.md  getting-started.rst  index.rst  methods.rst  recipes.md  recipes.rst  repo_cleanup.md  requirements.txt
docs/_static/: README.txt  custom.css
docs/guides/: cli.rst  evaluation.md  (+7 more)
oat_zero_ext/: __init__.py  listwise.py
ops/: README.md  analyze_countdown_comparative.py  eval_exact_answer_mode_coverage.py  eval_exact_answer_mode_pareto.py  eval_model_grid_node302.py  inspect_maxent_acceptance.py  make_exact_answer_mode_data.py  make_exact_countdown_mode_data.py  make_modebench_data.py  plot_dose_response.py  plot_exploration_sidecar.py  repo_env.sh  run_countdown_comparative_eval.sh  run_drgrpo_1p5b_pure_single_node.sh  run_drgrpo_explorer_1p5b_pure_single_node.sh  run_dual_4plus4_single_node.sh  run_eval_model_grid_node302.sh  run_experiment_quartet_single_node.sh  run_experiment_triplet_single_node.sh  run_grpo_listwise_figure_pair.sh  run_grpo_listwise_full_eval_pair.sh  run_grpo_listwise_full_eval_richsidecar_pair.sh  run_listwise_tau_beta_sweep.sh  run_manual_seed_eval_once.sh  run_maxent_tokenwise_1p5b_pure_single_node.sh  run_oat_zero_exact_1p5b_upstream.sh  run_oat_zero_exact_drx_1p5b_upstream.sh  run_oat_zero_explorer_1p5b_upstream.sh  run_oat_zero_math_7b_r1_upstream.sh  run_oat_zero_tiny_probe.sh  run_seed_eval_multiseed_curves.sh  run_seed_eval_sharded_cs.sh  run_seed_grpo_1p5b_pure_single_node.sh  sitecustomize.py  submit_countdown_comparative.sh  upload_all_drgrpo_seeds_to_hf.py  upload_drgrpo_seed_run_to_hf.py
paper/: Makefile  README.md  example_paper.bib  main.tex
results/: poc_sweep_20260130_125922.json
scripts/: bootstrap_env.sh  check_tracked_chaff.sh  sbatch_training.sh
slurm/: maxent-grpo.slurm  train.slurm
src/: configs.py  generate.py  grpo.py  maxent-grpo.py  rewards.py  rewards_core.py
tests/: README.md  __init__.py  conftest.py  test_answer_family_cluster.py  test_cli_config_validation.py  test_cli_console_scripts.py  test_cli_entrypoints.py  test_cli_generate.py  test_cli_generate_cli.py  test_cli_generate_integration.py  test_cli_hydra_cli.py  test_cli_hydra_smoke.py  test_cli_main_module.py  test_cli_shims.py  test_cli_training_entrypoints.py  test_cli_trl_and_optim.py  test_config_recipes.py  test_configs_validation.py  test_controller_optimizer.py  test_controller_resume.py  test_core_data_hub.py  test_core_hub_import.py  test_core_hub_model.py  test_core_model.py  test_core_model_additional.py  test_core_stubs.py  test_correctness_schedule.py  test_data.py  test_drx_math.py  test_drx_targets.py  test_entrypoints.py  test_eval_reward_funcs.py  test_evaluation.py  test_exact_answer_mode_coverage.py  test_exact_answer_mode_data.py  test_generate.py  test_generation_common.py  test_generation_common_additional.py  test_generation_distributed.py  test_generation_helpers_additional.py  (+141 more)
tools/: audit_oat_setup.py  bootstrap_env.sh  debug_lighteval_accelerate.py  ensure_local_path.sh  eval_math_delta.py  listwise_sweep_report.py  math_eval_table.py  merge_seed_eval_shards.py  merge_seed_eval_task_subshards.py  monitor_triplet_group.py  patch_trl_vllm_serve.py  perf_baseline.json  perf_microbench.py  plot_best_drgrpo_family_curves.py  plot_full_run_interim_training_compare.py  plot_listwise_sweep_live.py  plot_listwise_vs_grpo_accuracy_dynamics.py  plot_listwise_vs_grpo_distribution.py  plot_listwise_vs_grpo_eval_pass8.py  plot_listwise_vs_grpo_over_time.py  plot_listwise_vs_grpo_prompt_dynamics.py  plot_listwise_vs_grpo_prompt_level.py  probe_r1_raw_generate.sh  render_drgrpo_explorer_training_curve.py  render_quartet_pass1_table.py  render_quartet_pass8_mean8.py  render_seed_eval_multiseed_curves.py  render_sidecar_objective_figure.py  requirements-seed-paper-eval.txt  run_batch_lighteval.sh  run_full_inference.sh  run_full_lighteval.sh  run_math500_passes.sh  run_maxent_1p5b.sh  run_maxent_7b.sh  run_poc_sweep.py  run_r1_local_vllm_probe.py  run_r1_rollout_guard_probe.py  seed_eval_bootstrap.py  seed_paper_eval.py  (+8 more)
trainer_output/: controller_state.json
understand-r1-zero/: train_zero_math.py
wandb/: latest-run
(+1859 files in other folders)
